# EthnicStereotypes_in_wordembeddings

./: README.md  hello.py  pyproject.toml
Outputs/coha/: Agency_coha_10.csv  Agency_coha_100.csv  Agency_coha_1000.csv  Agency_coha_20.csv  Agency_coha_200.csv  Agency_coha_50.csv  Agency_coha_500.csv  Comptence_coha_10.csv  Comptence_coha_100.csv  Comptence_coha_1000.csv  Comptence_coha_20.csv  Comptence_coha_200.csv  Comptence_coha_50.csv  Comptence_coha_500.csv  Morality_coha_10.csv  Morality_coha_100.csv  Morality_coha_1000.csv  Morality_coha_20.csv  Morality_coha_200.csv  Morality_coha_50.csv  Morality_coha_500.csv  Politics_coha_10.csv  Politics_coha_100.csv  Politics_coha_1000.csv  Politics_coha_20.csv  Politics_coha_200.csv  Politics_coha_50.csv  Politics_coha_500.csv  Religion_coha_10.csv  Religion_coha_100.csv  Religion_coha_1000.csv  Religion_coha_20.csv  Religion_coha_200.csv  Religion_coha_50.csv  Religion_coha_500.csv  Status_coha_10.csv  Status_coha_100.csv  Status_coha_1000.csv  Status_coha_20.csv  Status_coha_200.csv  (+9 more)
Outputs/google/: Agency_google_10.csv  Agency_google_100.csv  Agency_google_1000.csv  Agency_google_20.csv  Agency_google_200.csv  Agency_google_50.csv  Agency_google_500.csv  Comptence_google_10.csv  Comptence_google_100.csv  Comptence_google_1000.csv  Comptence_google_20.csv  Comptence_google_200.csv  Comptence_google_50.csv  Comptence_google_500.csv  Status_google_10.csv  (+34 more)
Word_lists/: word_lists.py
Words/: personalitytraits_original.txt  word_lists.py
scm/: dimension_score.py
stereotype_content_model/: warmth.py
utils/: utility.py
