[project]
name = "ethnicstereotypes-in-wordembeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.0.12",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=75.8.2",
    "tabulate>=0.9.0",
    "wheel>=0.45.1",
]
